--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "sm4life",
   "version": "0.0.1",
+  "homeName": "Nhà của Bối",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -10,10 +11,19 @@
     "test": "jest"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^7.1.0",
+    "@fortawesome/react-native-fontawesome": "^0.3.2",
+    "@react-native/new-app-screen": "0.82.1",
+    "@react-navigation/bottom-tabs": "^7.7.1",
+    "@react-navigation/native": "^7.1.19",
+    "@react-navigation/stack": "^7.6.1",
     "react": "19.1.1",
     "react-native": "0.82.1",
-    "@react-native/new-app-screen": "0.82.1",
-    "react-native-safe-area-context": "^5.5.2"
+    "react-native-gesture-handler": "^2.29.0",
+    "react-native-safe-area-context": "^5.6.2",
+    "react-native-screens": "^4.18.0",
+    "react-native-vector-icons": "^10.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
