--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "19.1.1",
     "react-native": "0.82.1",
     "react-native-calendars": "^1.1313.0",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "^2.29.0",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.18.0",
